--- a/B/one.html
+++ b/B/one.html
@@ -6,6 +6,6 @@
     <title>Document</title>
 </head>
 <body>
-    <p>Hello world this is a file inside the directory B.</p>
+    <p>Hello world this is a file inside this  directory B.</p>
 </body>
 </html>
